scss/main.scss
@import "./resets";
@import "./variables";

@mixin flex-column {
  display: flex;
  align-items: center;
  flex-direction: column;
}

body {
  height: 100vh;
  width: 100vw;

  overflow-y: scroll;
  background-color: rgb(250, 250, 250);

  @media screen and (min-height: 980px) {
    #first-screen {
      overflow-y: hidden;
    }
  }
}
header {
  position: fixed;
  z-index: 1;
  top: 0px;
  left: 0px;

  height: 69px;
  width: 100%;

  display: flex;
  justify-content: center;
  align-items: center;

  font-size: 37px;
  font-weight: 700;
  color: white;

  background-color: $default-red;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
}
main {
  @include flex-column();

  height: calc(100vh - 69px);
  width: 100%;

  padding: 69px 18px 0;
}
#first-screen {
  @include flex-column();
  gap: 35px;

  @media screen and (min-width: 480px) {
    gap: 48px;
    width: 73vw;
  }
}
#first-screen article {
  position: relative;
  height: fit-content;
  width: $default-box-width;
  > img {
    height: $default-box-height;
    width: $default-box-width;

    border-radius: $default-border-radius;
  }
  > p {
    position: absolute;
    bottom: 15px;
    left: 17px;

    width: 90%;

    font-size: 19px;
    font-weight: $font-weight-regular;
    word-break: normal;
    color: white;
  }
  .gradient {
    height: $default-box-height;
    width: $default-box-width;
    border-radius: $default-border-radius;
  }
}
#first-screen .user-quizzes {
  @include flex-column();
  gap: 14px;

  position: relative;
  margin-top: 31px;

  height: 100%;
  width: 100%;

  > p {
    align-self: flex-start;
    width: 100%;

    line-height: 22px;
    font-weight: 700;
    text-decoration: none;
    font-size: $default-font-size;
  }
  ion-icon {
    position: absolute;
    top: -11px;
    right: 0px;

    color: $default-red;
    font-size: 40px;
  }
  @media screen and (min-width: 480px) {
    flex-direction: row;
    flex-wrap: wrap;

    ion-icon {
      left: 180px;
      font-size: 44px;
    }
    > p {
      font-size: 27px;
      width: 100%;
    }
  }
}
#second-screen {
  @include flex-column();

  gap: 24px;

  button {
    font-size: 18px;
    text-transform: uppercase;
  }
}
#second-screen article {
  position: relative;
  height: 142px;
  width: 100vw;

  > img {
    height: inherit;
    width: 100%;

    border: none;
  }
  > p {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    width: 90%;

    font-size: 19px;
    line-height: 22px;
    font-weight: $font-weight-regular;
    text-align: center;
    color: white;
  }
  .gradient {
    height: inherit;
    width: 100%;

    background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5));
  }
  @media screen and (min-width: 980px) {
    height: 227px;

    > p {
      font-size: 39px;
    }
  }
}
#third-screen {
  @include flex-column();

  height: 100%;
  width: 100vw;

  section {
    @include flex-column();

    // gap: 24px;

    button {
    font-size: 18px;
    text-transform: uppercase;
    }
    p {
    display: flex;
    justify-content: center;
    align-items: center;

    height: 89px;

    font-size: $default-font-size;
    font-weight: 700;
    }
    input {
    padding: 0 14px;
    height: 46px;
    width: 100%;

    font-style: italic;
    font-size: 19px;
    line-height: 46px;
    color: rgba(186, 186, 186, 1);

    background: #ffffff;
    border: 1px solid #d1d1d1;
    border-radius: $default-border-radius;
    }
  }
  .restart-quizz-btn {
    margin: 20px auto 40px;

    font-size: 13px;
    text-align: center;
  }
  article {
    position: relative;
    height: fit-content;
    width: $default-box-width;
    > img {
      height: $default-box-height;
      width: $default-box-width;
  
      border-radius: $default-border-radius;
    }
    > p {
      position: absolute;
      bottom: 15px;
      left: 17px;
  
      width: 90%;
  
      font-size: 19px;
      font-weight: $font-weight-regular;
      word-break: normal;
      color: white;
    }
    .gradient {
      height: $default-box-height;
      width: $default-box-width;
      border-radius: $default-border-radius;
    }
  }
}
.input-container {
  @include flex-column();

  background-color: rgb(255, 255, 255);
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);

  p {
    width: 100%;

    font-size: $default-font-size;
    font-weight: 700;
  }
}
.question-btn {
  display: flex;
  justify-content: space-between;
  align-items: center;

  padding: 22px 18px;
  height: 74px;
  width: 100vw;

  font-size: $default-font-size;
  font-weight: 700;

  cursor: pointer;
  background-color: white;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);

  ion-icon {
    font-size: 34px;
    align-self: flex-end;
  }
}
.question-btn:after {
  color: white;
  font-weight: bold;
  margin-left: 5px;
}
.active:after {
  box-shadow: none !important;
}
#create-quizz-1 {
  @include flex-column();
}
#create-quizz-1 .input-container {
  gap: 9px;
  padding: 22px 19px;

  height: fit-content;
  width: 100vw;

  p {
    width: 100%;

    font-size: $default-font-size;
    font-weight: 700;
  }
}
#create-quizz-2 {
  @include flex-column();
  height: min-content;
  width: inherit;
  gap: 12px;
}
#create-quizz-2 .input-container {
  position: relative;
  gap: 14px;
  padding: 0 19px;

  height: 0;
  width: 100%;
  overflow: hidden;
  transition: height 500ms cubic-bezier(0, 0, 0.32, 0.96);
  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);

  p {
    margin-top: 15px;
  }
  input {
    height: 46px;
  }
  ion-icon {
    position: absolute;
    margin: 0 auto;
    top: 92%;
    font-size: 50px;
  }
  .incorrect-answer {
    display: flex;
    flex-direction: column;
    gap: 14px;

    margin-bottom: 18px;
    height: auto;
    width: 100%;
  }
}
#create-quizz-3 {
  @include flex-column();
  height: min-content;
  width: inherit;
  gap: 12px;
}
#create-quizz-3 .input-container {
  position: relative;
  gap: 14px;
  padding: 0 19px;

  height: 0;
  width: 100%;
  overflow: hidden;
  transition: height 500ms cubic-bezier(0, 0, 0.32, 0.96);
  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);

  p {
    margin-top: 15px;
  }
  input {
    height: 46px;
  }
  ion-icon {
    position: absolute;
    margin: 0 auto;
    top: 85%;
    font-size: 50px;
  }
  textarea {
    padding: 14px;
    width: 100%;

    font-style: italic;
    font-size: 19px;
    color: rgba(186, 186, 186, 1);

    background: #ffffff;
    border: 1px solid #d1d1d1;
    border-radius: $default-border-radius;
    height: 177px;
  }
}
*.hidden {
  display: none !important;
}
.cover {
  object-fit: cover;
  height: inherit;
  width: 100%;
}
.gradient {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;

  background-image: linear-gradient(
    180deg,
    rgba(255, 255, 255, 0) 0%,
    rgba(0, 0, 0, 0.5) 64.58%,
    rgb(0, 0, 0) 100%
  );
}
.whitish{
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;

  background-color: rgba(255, 255, 255, 0.75);
}
.no-quizz-available {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-direction: column;

  min-height: $default-box-height;
  width: $default-box-width;

  margin-top: 31px;
  margin-bottom: 33px;
  padding: 10px 45px;

  border: 2px dashed #d5d5d5;
  box-sizing: border-box;
  border-radius: $default-border-radius;

  > p {
    width: 240px;

    font-size: 19px;
    font-weight: $font-weight-regular;
    line-height: 24px;
    color: rgba(185, 185, 185, 1);
    text-align: center;
  }
  > button {
    height: 40px;
    width: 151px;

    background-color: white;
    border: 2px dashed $default-red;
    border-radius: 50px;

    font-size: $default-font-size;
    color: $default-red;
  }
  @media screen and (min-width: 480px) {
    width: 100%;
    margin-top: 77px;
    padding: 10px 0;
  }
}
.all-quizzes {
  @include flex-column();
  gap: 14px;
  height: 100%;
  width: 100%;

  margin-bottom: 14px;

  > p {
    font-size: $default-font-size;
    font-weight: 700;
    align-self: flex-start;
    text-decoration: none;
  }
  @media screen and (min-width: 480px) {
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;

    > p {
      font-size: 27px;
      margin-bottom: 5px;
      width: 100%;
    }
  }
}
.quizz-question {
  @include flex-column();
  gap: 13px;
  padding: 18px;

  height: fit-content;
  width: 375px;

  background-color: white;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);

  figure {
    position: relative;

    display: flex;
    flex-direction: column;
    justify-content: space-around;

    height: 141px;

    font-size: $small-font-size;
    font-weight: 700;
    img {
      height: 113px;
      width: 163px;
    }
  }
  .question {
    display: flex;
    align-items: center;
    justify-content: center;

    padding: 0 10px;

    height: 89px;
    width: $default-box-width;

    font-size: 19px;
    font-weight: 700;
    text-align: center;
    color: white;
  }
  .answers {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 0.5fr;
    gap: 12px;

    width: 337px;
    height: fit-content;
  }
  #Q1 {
    background-color: rgba(67, 76, 160, 1);
  }
  #Q2 {
    background-color: rgba(160, 67, 141, 1);
  }
  #Q3 {
    background-color: rgba(22, 183, 189, 1);
  }
  #Q4 {
    background-color: rgba(30, 67, 141, 1);
  }
  @media screen and (max-width: 375px) {
    figure {
      img {
        height: 95px;
        width: 140px;
      }
    }
  }
  @media screen and (min-width: 980px) {
    width: $desktop-container-width;

    padding: 27px;

    .question {
      height: 138px;
      width: 688px;

      font-size: 23px;
    }
    .answers {
      gap: 24px;

      width: 688px;
    }
    figure {
      height: 218.62px;

      img {
        width: 332px;
        height: 175.2px;
      }
      figcaption {
        font-size: $default-font-size;
      }
    }
  }
}
.quizz-end {
  @include flex-column();
  gap: 13px;
  padding: 18px;

  height: fit-content;
  width: 375px;

  background-color: white;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);

  .level-title {
    display: flex;
    align-items: center;
    padding: 0 16px;

    min-height: 99px;
    width: $default-box-width;

    font-size: 19px;
    font-weight: 700;
    text-align: center;
    color: white;

    background-color: $default-red;
  }
  img {
    height: 255px;
    width: $default-box-width;
  }
  p {
    width: $default-box-width;
    font-size: 17px;
    line-height: 20px;
    font-weight: 700;
  }
  @media screen and (max-width: 375px) {
    width: 100%;

    img {
      width: 90%;
    }
    p {
      width: 90%;
    }
  }
  @media screen and (min-width: 980px) {
    flex-direction: row;
    align-content: space-between;
    align-items: flex-start;
    flex-wrap: wrap;

    padding: 18px;

    height: 430px;
    width: $desktop-container-width;

    .level-title {
      justify-content: center;

      width: 727px;
      font-size: 23px;
    }
    img {
      height: 273px;
      width: 364px;
    }
    p {
      font-size: 22px;
      line-height: 25px;
    }
  }
}
.home-btn {
  margin-bottom: 30px;

  font-size: 15px;
  color: rgba(129, 129, 129, 1);

  border-style: none;
  background-color: inherit;
}
.restart-quizz-btn {
  position: relative;
  left: 0px;
  top: 0px;

  padding: 15px;
  width: 180px;

  font-size: 0.9em;
  font-weight: 700;
  letter-spacing: 2px;
  text-transform: uppercase;
  color: $default-red;

  transition: all 0.3s ease-in-out 0s;

  border: 1px solid $default-red;
  box-shadow: $default-red 4px 4px 0px 0px;
  background-color: rgb(255, 255, 255);
}
.restart-quizz-btn:hover {
  left: 4px;
  top: 4px;
  box-shadow: rgb(255, 255, 255) 0px 0px 0px 0px;
}
::placeholder {
  color: rgba(186, 186, 186, 1);
}

//button css referenced at https://enjeck.com/btns/ (modified)

